[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/gameOverLabelFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Menus/blurry_background.gdshader" type="Shader" id=2]
[ext_resource path="res://Menus/Main_menu/main_ui_theme.tres" type="Theme" id=3]
[ext_resource path="res://Menus/GameOver_menu/GameOver_menu.gd" type="Script" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )

[node name="GameOver_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.1189
margin_bottom = -2.1189
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 530.0
margin_top = 287.0
margin_right = 622.0
margin_bottom = 361.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_restart" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 92.0
margin_bottom = 22.0
text = "Restart level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_mainMenu" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 92.0
margin_bottom = 48.0
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_exit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 92.0
margin_bottom = 74.0
text = "Exit game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
modulate = Color( 0.717647, 0, 0, 1 )
margin_left = 478.5
margin_top = 100.0
margin_right = 801.5
margin_bottom = 83.0
custom_fonts/font = ExtResource( 1 )
text = "You Died!"
__meta__ = {
"_edit_use_anchors_": false
}
